--- a/web/style.css
+++ b/web/style.css
@@ -14,3 +14,33 @@ main,
 header {
     padding: 5rem 0;
 }
+
+.event {
+    display: grid;
+    grid-template-areas:
+        "title title"
+        "speakers rsvp"
+        "date video";
+}
+
+.event .title {
+    grid-area: title;
+}
+
+.event .speakers {
+    grid-area: speakers;
+    margin: 0;
+}
+
+.event .date {
+    grid-area: date;
+    margin: 0;
+}
+
+.event .rsvp {
+    grid-area: rsvp;
+}
+
+.event .video {
+    grid-area: video;
+}
