--- a/web/style.css
+++ b/web/style.css
@@ -1,19 +1,101 @@
 @import url("https://fonts.googleapis.com/css?family=Noto+Serif");
 
+/* Basic normalize / reset. Let's not make this too complicated. */
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+/* Typography and type scale */
+
 html {
-    font-size: 16px;
+    font-size: 100%;
     font-family: Noto Serif;
 }
 
+body {
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+h1, h2, h3, h4, h5 {
+    margin: 0 0 1.38rem;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
+h1 {
+    margin-top: 0;
+    font-size: 3.052rem;
+}
+
+h2 {
+    font-size: 2.441rem;
+}
+
+h3 {
+    font-size: 1.953rem;
+}
+
+h4 {
+    font-size: 1.563rem;
+}
+
+h5, p.large {
+    font-size: 1.25rem;
+}
+
+small, .text_small {
+    font-size: 0.8rem;
+}
+
+/* Links */
+
+a {
+    padding: 0;
+    text-decoration: none;
+    line-height: 1.75;
+    border-bottom: 2px dotted;
+}
+
+/* Sizing & layout */
+
 main,
 .container {
-    max-width: 750px;
+    max-width: 900px;
     margin: 0 auto;
 }
 
 header {
-    padding: 5rem 0;
+    margin: 3rem 0;
 }
+
+header nav {
+    margin-bottom: 3rem;
+}
+
+p {
+    max-width: 60ch; /* Characters for optimal line length */
+}
+
+/* Navigation */
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-right: 1rem;
+}
+
+/* Events */
 
 .event {
     display: grid;
@@ -29,7 +111,6 @@ header {
 
 .event .speakers {
     grid-area: speakers;
-    margin: 0;
 }
 
 .event .date {
