--- a/web/style.css
+++ b/web/style.css
@@ -101,6 +101,14 @@ small, .text_small {
     font-size: 0.8rem;
 }
 
+ol, ul {
+    margin-bottom: 1rem;
+}
+
+li {
+    max-width: 55ch;
+}
+
 /* Links */
 
 a {
