--- a/web/style.css
+++ b/web/style.css
@@ -64,6 +64,7 @@ body {
     color: var(--darkbrown);
     font-weight: 400;
     line-height: 1.75;
+    padding: 1rem;
 }
 
 p {
@@ -103,6 +104,7 @@ small, .text_small {
 
 ol, ul {
     margin-bottom: 1rem;
+    margin-left: 2rem;
 }
 
 li {
@@ -147,6 +149,7 @@ p {
 
 nav ul {
     list-style: none;
+    margin-left: 0;
 }
 
 nav ul li {
