--- a/web/style.css
+++ b/web/style.css
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Serif");
+@font-face {
+    font-family: 'Hermeneus One';
+    src: url('/font/HermeneusOne-Regular.woff2') format('woff2'),
+        url('/font/HermeneusOne-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
 /* Basic normalize / reset. Let's not make this too complicated. */
 
@@ -72,6 +79,7 @@ p {
 }
 
 h1, h2, h3, h4, h5 {
+    font-family: "Hermeneus One", serif;
     margin: 0 0 1.38rem;
     font-weight: 400;
     line-height: 1.3;
