--- a/web/style.css
+++ b/web/style.css
@@ -7,6 +7,43 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Mulish';
+    src: url('Mulish-Bold.woff2') format('woff2'),
+        url('Mulish-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Mulish';
+    src: url('Mulish-BoldItalic.woff2') format('woff2'),
+        url('Mulish-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Mulish';
+    src: url('Mulish-Italic.woff2') format('woff2'),
+        url('Mulish-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Mulish';
+    src: url('Mulish-Regular.woff2') format('woff2'),
+        url('Mulish-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+
 /* Basic normalize / reset. Let's not make this too complicated. */
 
 * {
@@ -19,7 +56,7 @@
 
 html {
     font-size: 100%;
-    font-family: Noto Serif;
+    font-family: Mulish, sans-serif;
 
     /* Colour scheme */
     --onehotpink: #F72585;
