--- a/web/style.css
+++ b/web/style.css
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'Mulish';
-    src: url('Mulish-Bold.woff2') format('woff2'),
-        url('Mulish-Bold.woff') format('woff');
+    src: url('/font/Mulish-Bold.woff2') format('woff2'),
+        url('/font/Mulish-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'Mulish';
-    src: url('Mulish-BoldItalic.woff2') format('woff2'),
-        url('Mulish-BoldItalic.woff') format('woff');
+    src: url('/font/Mulish-BoldItalic.woff2') format('woff2'),
+        url('/font/Mulish-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'Mulish';
-    src: url('Mulish-Italic.woff2') format('woff2'),
-        url('Mulish-Italic.woff') format('woff');
+    src: url('/font/Mulish-Italic.woff2') format('woff2'),
+        url('/font/Mulish-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'Mulish';
-    src: url('Mulish-Regular.woff2') format('woff2'),
-        url('Mulish-Regular.woff') format('woff');
+    src: url('/font/Mulish-Regular.woff2') format('woff2'),
+        url('/font/Mulish-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
