--- a/web/style.css
+++ b/web/style.css
@@ -139,17 +139,18 @@ h4 {
     font-size: 1.563rem;
 }
 
-h5, p.large {
+h5, p {
     font-size: 1.25rem;
 }
 
-small, .text_small {
-    font-size: 0.8rem;
+small, p.small {
+    font-size: 1rem;
 }
 
 ol, ul {
     margin-bottom: 1rem;
     margin-left: 2rem;
+    font-size: 1.25rem;
 }
 
 li {
