--- a/web/style.css
+++ b/web/style.css
@@ -260,13 +260,36 @@ img.logo {
 
 .organizers {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 1rem;
-    row-gap: 1rem;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: none;
+    column-gap: 2rem;
+    row-gap: 2rem;
 }
 
 .organizer img {
     max-width: 100%;
+}
+
+@media only screen and (min-width: 450px) {
+    .organizers {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .organizer img {
+        max-width: 100%;
+    }
+}
+
+@media only screen and (min-width: 750px) {
+    .organizers {
+        grid-template-rows: none;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .organizer img {
+        max-width: 100%;
+    }
 }
 
 .organizer span.rob-color {
