--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -29,8 +29,8 @@
       <nav>
         <ul>
           <li {{ active("index.html") }}><a href="/">events</a></li>
-          <li {{ active("about.html") }}><a href="/about.html">about</a></li>
-          <li {{ active("code-of-conduct.html") }}><a href="/code-of-conduct.html">code of conduct</a></li>
+          <li {{ active("about.html") }}><a href="/about">about</a></li>
+          <li {{ active("code-of-conduct.html") }}><a href="/code-of-conduct">code of conduct</a></li>
         </ul>
       </nav>
       {% block header %}
