Fix active page highlighting in the navigation

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -28,9 +28,9 @@
       </a>
       <nav>
         <ul>
-          <li {{ active("index.html") }}><a href="/">events</a></li>
-          <li {{ active("about.html") }}><a href="/about">about</a></li>
-          <li {{ active("code-of-conduct.html") }}><a href="/code-of-conduct">code of conduct</a></li>
+          <li {{ active("/") }}><a href="/">events</a></li>
+          <li {{ active("/about") }}><a href="/about">about</a></li>
+          <li {{ active("/code-of-conduct") }}><a href="/code-of-conduct">code of conduct</a></li>
         </ul>
       </nav>
       {% block header %}
