--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <title>Onehot - data science community</title>
-  <link rel="icon" type="image/png" href="/img/favicon.png">
+  <link rel="icon" type="image/png" href="/img/icons/favicon.png">
   <link rel="stylesheet" href="/style.css">
 
   <!-- Metadata -->
