--- a/web/templates/event.html
+++ b/web/templates/event.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block main %}
-{% for talk in talks %}
+{% for talk in event.talks %}
 <h2>Talk: {{ talk.title }}</h2>
 <h3>{{ talk.subtitle }}</h3>
 
@@ -16,7 +16,7 @@
 
 <p>{{ talk.speaker.bio }}</p>
 
-<img src="{{ talk.speaker.photo_url }}"></img>
+<img src="{{ talk.speaker.photo_url }}">
 {% endfor %}
 
 {% endblock %}
