--- a/web/style.css
+++ b/web/style.css
@@ -129,17 +129,19 @@ h1 {
 
 h2 {
     font-size: 2.441rem;
+    margin-top: 3rem;
 }
 
 h3 {
     font-size: 1.953rem;
+    margin-top: 3rem;
 }
 
 h4 {
     font-size: 1.563rem;
 }
 
-h5, p {
+h5, p , span{
     font-size: 1.25rem;
 }
 
@@ -218,30 +220,27 @@ nav ul li.active a {
 .event {
     display: grid;
     grid-template-areas:
-        "title title"
-        "date rsvp"
-        "speakers video";
+        "title date"
+        "description details";
 }
 
 .event .title {
     grid-area: title;
 }
 
-.event .speakers {
-    grid-area: speakers;
+.event .description {
+    grid-area: description;
+    padding-right: 4rem;
 }
 
-.event .date {
-    grid-area: date;
+.event .details {
+    grid-area: details;
     margin: 0;
+    font-style: italic;
 }
 
-.event .rsvp {
-    grid-area: rsvp;
-}
-
-.event .video {
-    grid-area: video;
+.event .details span {
+  display: block;
 }
 
 /* Logo */
