--- a/web/style.css
+++ b/web/style.css
@@ -243,6 +243,17 @@ nav ul li.active a {
   display: block;
 }
 
+/* Event details page */
+
+.title{
+  margin-bottom: 0.5rem;
+}
+
+.subtitle {
+  margin-top: 0;
+  font-style: italic;
+}
+
 /* Logo */
 
 a.logo {
