--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -16,7 +16,25 @@
   <meta name="author" content="Onehot">
   <meta name="keywords" content="Onehot, data, science, community, meetups, conference, event, utrecht, one-hot, 1hot">
 
-  <!-- TODO: Open graph and icons -->
+  <!-- Open graph Meta Tags -->
+  <meta property="og:url" content="https://onehot.nl">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Onehot - data science community">
+  <meta property="og:site_name" content="Onehot - data science community">
+  <meta property="og:description" content="We're a community of people who enjoy working with data. We want to bring people from our field together in order to share our experiences and learn from one another.">
+
+  <!-- Image optimised for Linkedin -->
+  <meta property="og:image" content="/img/icons/opengraph/180x110.png">
+  <meta property="og:image:width" content="180">
+  <meta property="og:image:height" content="110">
+
+  <!-- Image optimised for Facebook -->
+  <meta property="og:image" content="/img/icons/opengraph/1200x630.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Image optimised for Twitter -->
+  <meta name=”twitter:image” content="img/icons/og600x300.png">
 
 </head>
 <body>
