Further expand meta tags for Twitter

--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -35,6 +35,9 @@
 
   <!-- Image optimised for Twitter -->
   <meta name=”twitter:image” content="img/icons/og600x300.png">
+  <meta name=”twitter:image:alt” content="Logo of Onehot">
+  <meta name=”twitter:card content="summar_large_image">
+  <meta name=”twitter:title content="Onehot is a community of people who enjoy working with data.">
 
 </head>
 <body>
