--- a/web/templates/layout.html
+++ b/web/templates/layout.html
@@ -16,7 +16,7 @@
   <meta name="author" content="Onehot">
   <meta name="keywords" content="Onehot, data, science, community, meetups, conference, event, utrecht, one-hot, 1hot">
 
-  <!-- Open graph Meta Tags -->
+  <!-- Open graph meta tags -->
   <meta property="og:url" content="https://onehot.nl">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Onehot - data science community">
@@ -33,11 +33,13 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 
-  <!-- Image optimised for Twitter -->
+  <!-- Image and tags optimised for Twitter -->
   <meta name=”twitter:image” content="img/icons/og600x300.png">
   <meta name=”twitter:image:alt” content="Logo of Onehot">
   <meta name=”twitter:card content="summar_large_image">
-  <meta name=”twitter:title content="Onehot is a community of people who enjoy working with data.">
+  <meta name=”twitter:title content="Onehot - data science community">
+  <meta name="twitter:description" content="We're a community of people who enjoy working with data. We want to bring people from our field together in order to share our experiences and learn from one another.">
+
 
 </head>
 <body>
