Update order of speakers and use placeholder data for Jazmin; include accessibility statement.

--- a/web/templates/event.html
+++ b/web/templates/event.html
@@ -14,6 +14,12 @@
     <li><a href="{{ event.meetup_url }}" target="_blank">Please RSVP on Meetup</a></li>
   </ul>
   </div>
+
+<p class="small">Please let us know if we can do anything to make the event
+  (more) accessible to you. We will try our best to accomodate any needs you may
+  have. You can reach us through <a href="mailto:organisation@onehot.nl">
+    organisation@onehot.nl</a>.
+</p>
 {% endblock %}
 
 
