--- a/web/style.css
+++ b/web/style.css
@@ -221,6 +221,7 @@ nav ul li.active a {
     grid-template-areas:
         "title date"
         "description details";
+    column-gap: 1rem;
 }
 
 .event_list .event .title {
