--- a/web/style.css
+++ b/web/style.css
@@ -216,7 +216,7 @@ nav ul li.active a {
 
 /* Events list */
 
-.event_list .event {
+.event-list .event {
     display: grid;
     grid-template-areas:
         "title date"
@@ -224,21 +224,21 @@ nav ul li.active a {
     column-gap: 1rem;
 }
 
-.event_list .event .title {
+.event-list .event .title {
     grid-area: title;
 }
 
-.event_list .event .description {
+.event-list .event .description {
     grid-area: description;
 }
 
-.event_list .event .details {
+.event-list .event .details {
     grid-area: details;
     margin: 0;
     /* font-style: italic; */
 }
 
-.event_list .event .details span {
+.event-list .event .details span {
   display: block;
 }
 
