--- a/web/style.css
+++ b/web/style.css
@@ -222,6 +222,7 @@ nav ul li.active a {
         "title date"
         "description details";
     column-gap: 1rem;
+    margin-bottom: 2rem;
 }
 
 .event-list .event .title {
