Add Bianca to organizers page

--- a/web/style.css
+++ b/web/style.css
@@ -324,7 +324,7 @@ img.logo {
 
 .organizers {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-columns: none;
     column-gap: 2rem;
     row-gap: 2rem;
@@ -348,11 +348,11 @@ img.logo {
 @media only screen and (min-width: 750px) {
     .organizers {
         grid-template-rows: none;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 
     .organizer img {
-        max-width: 100%;
+        max-width: 350px;
     }
 }
 
