--- a/web/style.css
+++ b/web/style.css
@@ -334,7 +334,7 @@ img.logo {
     max-width: 100%;
 }
 
-@media only screen and (min-width: 450px) {
+@media only screen and (min-width: 500px) {
     .organizers {
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -347,12 +347,38 @@ img.logo {
 
 @media only screen and (min-width: 750px) {
     .organizers {
-        grid-template-rows: none;
-        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
     .organizer img {
-        max-width: 350px;
+        max-width: 100%;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .organizers {
+        margin-left: calc((100vw - 1000px) / 2 * -1);
+        margin-right: calc((100vw - 1000px) / 2 * -1);
+        grid-template-rows: none;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .organizer img {
+        max-width: 100%;
+    }
+}
+
+@media only screen and (min-width: 1350px) {
+    .organizers {
+        margin-left: calc((100vw - 1000px) / 2 * -1);
+        margin-right: calc((100vw - 1000px) / 2 * -1);
+        grid-template-rows: none;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+
+    .organizer img {
+        max-width: 100%;
     }
 }
 
