Add support for rendering Markdown to talk abstracts

--- a/web/templates/event.html
+++ b/web/templates/event.html
@@ -37,7 +37,7 @@
   <h3 class="title">{{ talk.title }}</h3>
   <h4 class="subtitle">{{ talk.subtitle }}</h4>
 
-  <p>{{ talk.abstract }}</p>
+  {{ talk.abstract_rendered }}
   <p class="keywords small">Keywords: {{ talk.keywords }}</p>
 
   <div class="biography">
