Add first draft of blurb and description

--- a/web/templates/event.html
+++ b/web/templates/event.html
@@ -24,7 +24,7 @@
 {% endif %}
 
 <p class="small">Please let us know if we can do anything to make the event
-  (more) accessible to you. We will try our best to accomodate any needs you may
+  (more) accessible to you. We will try our best to accommodate any needs you may
   have. You can reach us through <a href="mailto:organisation@onehot.nl">
     organisation@onehot.nl</a>.
 </p>
