--- a/web/style.css
+++ b/web/style.css
@@ -223,6 +223,7 @@ nav ul li.active a {
         "description details";
     column-gap: 1rem;
     margin-bottom: 2rem;
+    grid-template-columns: 70% 25%;
 }
 
 .event-list .event .title {
