Fix the organizers page on wide screens
This is a nice example of getting rid of complexity. Not having to deal
with overriding the `max-width` of the parent means that the styles here
become a lot simpler and way more declarative.

--- a/web/style.css
+++ b/web/style.css
@@ -358,6 +358,7 @@ img.logo {
     grid-template-columns: none;
     column-gap: 2rem;
     row-gap: 2rem;
+    margin-top: 3rem;
 }
 
 .organizer img {
@@ -366,12 +367,8 @@ img.logo {
 
 @media only screen and (min-width: 500px) {
     .organizers {
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    }
-
-    .organizer img {
-        max-width: 100%;
     }
 }
 
@@ -380,35 +377,15 @@ img.logo {
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 1fr 1fr 1fr;
     }
-
-    .organizer img {
-        max-width: 100%;
-    }
-}
-
-@media only screen and (min-width: 1000px) {
-    .organizers {
-        margin-left: calc((100vw - 1000px) / 2 * -1);
-        margin-right: calc((100vw - 1000px) / 2 * -1);
-        grid-template-rows: none;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-
-    .organizer img {
-        max-width: 100%;
-    }
 }
 
 @media only screen and (min-width: 1350px) {
     .organizers {
-        margin-left: calc((100vw - 1000px) / 2 * -1);
-        margin-right: calc((100vw - 1000px) / 2 * -1);
         grid-template-rows: none;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
-
-    .organizer img {
-        max-width: 100%;
+        max-width: 1800px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
